Removed some dead code in forum classes | Collapse/Expand post tree via AJAX (by akordosz for HSU Hamburg) | Post view (incl. tree) performance improvements (by akordosz for HSU Hamburg) | Revised thread/topic table gui and made many performance fixes (mantis report #8551) | Introduced a single class for displaying author information (instead of having different algorithms in different classes :-) ) and a class for preloading user instances (only with necessary data for the forum) without processing 6 sql queries for every single user instance
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@34138 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/Modules/Forum/css/forum_tree.css
+++ b/Modules/Forum/css/forum_tree.css
@@ -1,9 +1,15 @@
-#treeView {
+#treeViewContainer {
 	overflow-x: auto;
 	overflow-y: auto;
-	width: 100%;
 	height: 100%;
 	border-right: 4px solid #F4F4F4;
+	background-color: #FAFAFA;
+	width: 350px;
+}
+
+#treeView {
+	width: 100%;
+	height: 100%;
 }
 
 #treeView table {
